--- a/Lentekind_app/Base.lproj/Main.storyboard
+++ b/Lentekind_app/Base.lproj/Main.storyboard
@@ -481,10 +481,17 @@
                             <outlet property="delegate" destination="Xrr-Q1-FEc" id="BvE-As-5gL"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Title" id="R4e-7d-eMD"/>
+                    <navigationItem key="navigationItem" title="Title" id="R4e-7d-eMD">
+                        <barButtonItem key="rightBarButtonItem" title="Niet betaald" id="jdx-zL-etx">
+                            <connections>
+                                <action selector="onPaidClick:" destination="Xrr-Q1-FEc" id="vJB-Pn-dxK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="childNav" destination="R4e-7d-eMD" id="J4j-yv-Ny5"/>
                         <outlet property="childTable" destination="xl8-gU-Vu9" id="jgH-ah-m4f"/>
+                        <outlet property="paidDateBtn" destination="jdx-zL-etx" id="7NP-XS-Ph3"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mSe-au-pAU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -531,7 +538,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="w15-58-fsi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3841" y="38"/>
+            <point key="canvasLocation" x="4977" y="38"/>
         </scene>
         <!--Mijn kind-->
         <scene sceneID="LXd-K4-QT7">
@@ -732,7 +739,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BYm-AM-eHU" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="p5t-B7-ybW" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4710" y="777"/>
+            <point key="canvasLocation" x="5851" y="777"/>
         </scene>
         <!--Title-->
         <scene sceneID="9s5-32-19V">
@@ -830,7 +837,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DZ6-rr-ID2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="5790" y="777"/>
+            <point key="canvasLocation" x="6932" y="777"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="tAj-Jr-fKo">
@@ -938,7 +945,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PdZ-h7-7ch" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="hyM-Ey-7Sw" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="6931.884057971015" y="776.78571428571422"/>
+            <point key="canvasLocation" x="7833" y="777"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="pQh-LW-sZy">
@@ -954,7 +961,21 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dSf-DJ-Ugh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3841" y="777"/>
+            <point key="canvasLocation" x="4977" y="777"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="C9R-tB-n45">
+            <objects>
+                <tabBarController id="mSF-gF-Oim" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Caq-xc-R8Q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ntV-Wl-1nn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2238" y="592"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Aa0-gZ-OQC">
@@ -970,7 +991,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sA8-oT-Lw2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2887" y="31"/>
+            <point key="canvasLocation" x="4025" y="38"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="S0O-B5-j0z">
