--- a/Lentekind_app/Base.lproj/Main.storyboard
+++ b/Lentekind_app/Base.lproj/Main.storyboard
@@ -55,7 +55,7 @@
                                         </constraints>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <textInputTraits key="textInputTraits" textContentType="password"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                     </textField>
                                 </subviews>
                             </stackView>
@@ -73,22 +73,35 @@
                                     <segue destination="yaB-Os-Qp4" kind="show" id="nBr-2g-KO4"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SO8-uW-Vgg">
+                                <rect key="frame" x="60" y="333" width="294" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="jLG-yv-46q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.3795561026" blue="0.36619242320000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="cfe-cW-pqG" firstAttribute="centerX" secondItem="J5b-R2-00I" secondAttribute="centerX" id="3EE-4W-uhD"/>
                             <constraint firstItem="Zo9-ci-VAE" firstAttribute="centerX" secondItem="J5b-R2-00I" secondAttribute="centerX" id="76V-mA-oEw"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="J5b-R2-00I" secondAttribute="trailing" constant="60" id="7o1-II-QTR"/>
+                            <constraint firstItem="J5b-R2-00I" firstAttribute="centerX" secondItem="SO8-uW-Vgg" secondAttribute="centerX" id="FjD-m1-aaR"/>
                             <constraint firstItem="Zo9-ci-VAE" firstAttribute="top" secondItem="J5b-R2-00I" secondAttribute="bottom" constant="8" id="VXt-d2-jCS"/>
                             <constraint firstItem="cfe-cW-pqG" firstAttribute="top" secondItem="Zo9-ci-VAE" secondAttribute="bottom" constant="8" id="djR-rn-43Q"/>
+                            <constraint firstItem="J5b-R2-00I" firstAttribute="width" secondItem="SO8-uW-Vgg" secondAttribute="width" id="hUj-d1-Pa8"/>
                             <constraint firstItem="J5b-R2-00I" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="60" id="sot-8r-Iha"/>
                             <constraint firstItem="J5b-R2-00I" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="xzI-GE-dYx"/>
+                            <constraint firstItem="J5b-R2-00I" firstAttribute="top" secondItem="SO8-uW-Vgg" secondAttribute="top" constant="50" id="zrH-av-JgH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="login" largeTitleDisplayMode="always" id="dCk-F3-jBA"/>
                     <connections>
                         <outlet property="emailTxt" destination="oMR-Uo-Ala" id="U3x-Nz-F4X"/>
+                        <outlet property="errorLbl" destination="SO8-uW-Vgg" id="tLm-Lu-JTV"/>
                         <outlet property="passwordTxt" destination="FHV-9d-CTw" id="8Jv-Dg-p0H"/>
                         <segue destination="mSF-gF-Oim" kind="presentation" identifier="ParentSegue" id="fUU-N0-Q0W"/>
                         <segue destination="98k-MA-KhT" kind="presentation" identifier="AdminSegue" id="RuH-lG-dEx"/>
@@ -123,7 +136,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Xd9-jg-jBD">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="0Yk-BE-W24">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="832.33333333333337"/>
@@ -184,7 +197,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="achternaam" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="AD7-Yu-r2e">
-                                                        <rect key="frame" x="8" y="36.333333333333343" width="398" height="30.666666666666671"/>
+                                                        <rect key="frame" x="8" y="36.333333333333314" width="398" height="30.666666666666671"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
@@ -268,10 +281,10 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="minstens 7 karakters" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OKj-HS-WN8">
-                                                        <rect key="frame" x="8" y="36.333333333333314" width="398" height="30.666666666666671"/>
+                                                        <rect key="frame" x="8" y="36.333333333333371" width="398" height="30.666666666666671"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits" textContentType="password"/>
+                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -299,7 +312,7 @@
                                                         <rect key="frame" x="8" y="36.333333333333371" width="398" height="30.666666666666671"/>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
+                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                     </textField>
                                                 </subviews>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -378,7 +391,7 @@
                         <outlet property="passwordRepeatTxt" destination="jtA-1d-b8a" id="1WX-4A-FgX"/>
                         <outlet property="passwordTxt" destination="OKj-HS-WN8" id="tbC-hO-fGQ"/>
                         <outlet property="telNrTxt" destination="XdR-4n-gY5" id="jg9-AD-2u0"/>
-                        <segue destination="mSF-gF-Oim" kind="show" identifier="ParentSegue" id="unN-Dw-fS3"/>
+                        <segue destination="mSF-gF-Oim" kind="presentation" identifier="ParentSegue" id="unN-Dw-fS3"/>
                         <segue destination="98k-MA-KhT" kind="presentation" identifier="AdminSegue" id="IrW-Wg-HcE"/>
                     </connections>
                 </viewController>
@@ -681,30 +694,6 @@
                                                 <constraint firstItem="t03-KW-mvh" firstAttribute="top" secondItem="qEv-rF-kho" secondAttribute="top" constant="8" id="ULQ-R3-arq"/>
                                                 <constraint firstAttribute="bottom" secondItem="t03-KW-mvh" secondAttribute="bottom" constant="8" id="Ur1-Xm-vHO"/>
                                                 <constraint firstItem="t03-KW-mvh" firstAttribute="leading" secondItem="qEv-rF-kho" secondAttribute="leading" constant="10" id="tMM-Gq-iRC"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                    </tableViewCell>
-                                </cells>
-                            </tableViewSection>
-                            <tableViewSection headerTitle="Aanwezige datums" id="sJh-sb-uQS">
-                                <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" rowHeight="50" id="tiU-5o-yTm">
-                                        <rect key="frame" x="0.0" y="595" width="414" height="50"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="tiU-5o-yTm" id="Ghz-co-ZrY">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="49.666666666666664"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M7B-aT-Ato">
-                                                    <rect key="frame" x="10" y="8" width="394" height="33.666666666666664"/>
-                                                    <state key="normal" title="Datums toevoegen"/>
-                                                </button>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="M7B-aT-Ato" firstAttribute="leading" secondItem="Ghz-co-ZrY" secondAttribute="leading" constant="10" id="A6J-R0-h0c"/>
-                                                <constraint firstAttribute="bottom" secondItem="M7B-aT-Ato" secondAttribute="bottom" constant="8" id="UZZ-xz-1iF"/>
-                                                <constraint firstAttribute="trailing" secondItem="M7B-aT-Ato" secondAttribute="trailing" constant="10" id="lFJ-cS-C2Y"/>
-                                                <constraint firstItem="M7B-aT-Ato" firstAttribute="top" secondItem="Ghz-co-ZrY" secondAttribute="top" constant="8" id="tus-dC-dVM"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -1041,7 +1030,7 @@
                         <outlet property="errorLbl" destination="gE1-u1-X9I" id="Ecu-XK-VFH"/>
                         <outlet property="nameLbl" destination="HBc-tu-Dql" id="Md1-Kb-bvV"/>
                         <outlet property="telNrLbl" destination="SLG-Tp-GvD" id="yKn-ub-YmQ"/>
-                        <segue destination="BYZ-38-t0r" kind="show" identifier="LoginSegue" id="p4j-V1-Fke"/>
+                        <segue destination="Bwk-wh-bTj" kind="presentation" identifier="LoginSegue" id="13H-2w-sug"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7h4-Rq-guS" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1109,6 +1098,5 @@
         <segue reference="IrW-Wg-HcE"/>
         <segue reference="hh9-kO-9q2"/>
         <segue reference="unN-Dw-fS3"/>
-        <segue reference="p4j-V1-Fke"/>
     </inferredMetricsTieBreakers>
 </document>
